LPS-64048 - Remove alert padding to prevent it from blocking clickable areas behind

--- a/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_alert.scss
+++ b/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_alert.scss
@@ -16,5 +16,10 @@
 	.lfr-alert-wrapper {
 		margin-bottom: 5px;
 		overflow: hidden;
+
+		&.container-fluid-1280 {
+			max-width: 1250px;
+			padding: 0;
+		}
 	}
 }
